[package]
name = "liblbfgs-sys"
version = "0.1.3"
authors = ["Messense Lv <messense@icloud.com>"]
description = "Low level Rust binding to libLBFGS"
edition = "2018"
links = "lbfgs"
license = "MIT"
repository = "https://github.com/messense/liblbfgs-sys"
keywords = ["lbfgs", "crfsuite"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
cmake = "0.1.45"
